--- a/README
+++ b/README
@@ -5,6 +5,18 @@
 Ruffian is a hapi-based server that allows developers to easily set up fake 
 servers for isolated testing.
 
+## Installation
+
+You can install ruffian as a global tool:
+```
+npm install -g ruffian
+```
+And then start it through the cli:
+```
+
+```
+
+
 ## Setting up fakes through the REST interface
 
 Once the server is running, you can configure behavior by posting data to the 
